--- a/vtrende/package.json
+++ b/vtrende/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "cookies-next": "^4.0.0",
+    "embla-carousel-react": "^8.6.0",
     "jwt-decode": "^4.0.0",
     "next": "14.2.18",
     "react": "^18",
