--- a/vtrende/package.json
+++ b/vtrende/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
