--- a/vtrende/package.json
+++ b/vtrende/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.2",
     "react-hot-toast": "^2.5.2",
+    "react-intersection-observer": "^9.16.0",
     "sass": "^1.87.0",
     "scss": "^0.2.4",
     "zustand": "^5.0.4"
